@@ -1,19 +1,20 @@
 package org.aksw.jena_sparql_api.lookup;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.aksw.jena_sparql_api.util.collection.RangedSupplier;
 
 import com.google.common.collect.Range;
 
+import io.reactivex.Single;
+
 public interface ListPaginator<T>
     extends RangedSupplier<Long, T>
 {
-    CountInfo fetchCount(Long itemLimit, Long rowLimit);
+    Single<Range<Long>> fetchCount(Long itemLimit, Long rowLimit);
 
     default List<T> fetchList(Range<Long> range) {
-        List<T> result = apply(range).collect(Collectors.toList());
+        List<T> result = apply(range).toList().blockingGet(); //.collect(Collectors.toList());
         return result;
     }
 
